SERVER-7924 Disable Windows CRT dialog on abort()

Use _set_abort_behavior() to prevent the C runtime from displaying
a dialog box in Windows debug builds when abort() is called.